<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.mbari</groupId>
  <artifactId>mbarix4j</artifactId>
  <packaging>jar</packaging>
  <version>2.0.5.jre11</version>
  <name>mbarix4j - MBARI Extensions for Java</name>
  <url>https://github.com/hohonuuli/mbarix4j</url>
  <description>MBARI developed java code that is shared across different projects</description>
  <scm>
    <connection>scm:git@github.com:hohonuuli/mbarix4j.git</connection>
    <developerConnection>scm:git:git@github.com:hohonuuli/mbarix4j.git</developerConnection>
    <url>https://github.com/hohonuuli/mbarix4j</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <encoding>UTF-8</encoding>
  </properties>
  <developers>
    <developer>
      <id>brian</id>
      <name>Brian Schlining</name>
      <email>brian@mbari.org</email>
      <roles>
        <role>Lead Engineer</role>
      </roles>
      <organization>MBARI</organization>
      <timezone>-8</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>jira</system>
    <url>https://github.com/hohonuuli/mbarix4j/issues</url>
  </issueManagement>

  <!-- Repositories -->
  <repositories>
    <repository>
      <id>ibiblio</id>
      <name>Ibiblio Repository</name>
      <url>http://www.ibiblio.org/maven2</url>
    </repository>
    <repository>
      <id>dev.java.net</id>
      <name>Java.net Repository for Maven</name>
      <url>http://download.java.net/maven/2/</url>
      <layout>default</layout>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.0-alpha0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>2.0.0-alpha0</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>11</release>
          <!--          <source>11</source>-->
          <!--          <target>11</target>-->
        </configuration>
      </plugin>
      <!-- Create source and javadoc jars when deploying -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
        <configuration>
          <useReleaseProfile>false</useReleaseProfile>
          <releaseProfiles>release</releaseProfiles>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-webdav</artifactId>
      </extension>
    </extensions>
  </build>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <links>
            <link>https://docs.oracle.com/javase/7/docs/api/</link>
          </links>
        </configuration>
        <!--<executions>-->
        <!--<execution>-->
        <!--<id>attach-javadocs</id>-->
        <!--<goals>-->
        <!--<goal>jar</goal>-->
        <!--</goals>-->
        <!--</execution>-->
        <!--</executions>-->
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>taglist-maven-plugin</artifactId>
        <configuration>
          <tags>
            <tag>TODO</tag>
            <tag>RxINC</tag>
            <tag>@todo</tag>
            <tag>FIXME</tag>
            <tag>XXX</tag>
          </tags>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jxr-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-pmd-plugin</artifactId>
        <configuration>
          <targetJdk>1.8</targetJdk>
          <rulesets>
            <ruleset>/rulesets/basic.xml</ruleset>
            <ruleset>/rulesets/imports.xml</ruleset>
            <ruleset>/rulesets/unusedcode.xml</ruleset>
            <ruleset>/rulesets/finalizers.xml</ruleset>
          </rulesets>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jdepend-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </reporting>


  <distributionManagement>
    <!-- <repository>
      <id>bintray</id>
      <url>https://api.bintray.com/maven/org-mbari/maven/mbarix4j</url>
    </repository> -->
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/mbari-org/maven</url>
    </repository>
  </distributionManagement>

</project>